--- a/package.json
+++ b/package.json
@@ -17,7 +17,7 @@
     "@emotion/styled": "^11",
     "@types/react-scroll": "^1.8.4",
     "framer-motion": "^6",
-    "next": "12.1.6",
+    "next": "^12.2.3",
     "next-react-svg": "1.1.3",
     "node-fetch": "^3.2.9",
     "react": "18.1.0",
