debug deploy to k8s

--- a/.github/workflows/publish-docker-image-and-deploy.yml
+++ b/.github/workflows/publish-docker-image-and-deploy.yml
@@ -46,6 +46,7 @@ jobs:
           labels: ${{ steps.meta.outputs.labels }}
   deploy:
     name: Deploy frontend to k8s
+    needs: push_to_registry
     runs-on: ubuntu-latest
     steps:
       - name: Set Kubernetes Context
@@ -53,17 +54,17 @@ jobs:
         with:
           method: kubeconfig
           kubeconfig: ${{ secrets.KUBE_CONFIG }}
-    - name: Deploy to k8s
-      shell: bash
-      working-directory: charts
-      # port forwarding works only inside the step, consider refactoring as TS action
-      env:
-        NAMESPACE_NAME: bs-frontend
-      run: |
-        mkdir ~/.ssh
-        ssh-keyscan -H $BASTION_HOST >> ~/.ssh/known_hosts
-        eval `ssh-agent -s`
-        ssh-add - <<< "$BASTION_SSH_KEY"
-        sudo echo "127.0.0.1 $K8S_HOST" | sudo tee -a /etc/hosts
-        ssh -fN -v -L $K8S_LOCAL_PORT:$K8S_HOST:$K8S_PORT $USERNAME@$BASTION_HOST
-        helm upgrade --install -n $NAMESPACE_NAME $NAMESPACE_NAME ./ -f values-frontend.yaml --create-namespace
+      - name: Deploy to k8s
+        shell: bash
+        working-directory: charts
+        # port forwarding works only inside the step, consider refactoring as TS action
+        env:
+          NAMESPACE_NAME: bs-frontend
+        run: |
+          mkdir ~/.ssh
+          ssh-keyscan -H $BASTION_HOST >> ~/.ssh/known_hosts
+          eval `ssh-agent -s`
+          ssh-add - <<< "$BASTION_SSH_KEY"
+          sudo echo "127.0.0.1 $K8S_HOST" | sudo tee -a /etc/hosts
+          ssh -fN -v -L $K8S_LOCAL_PORT:$K8S_HOST:$K8S_PORT $USERNAME@$BASTION_HOST
+          helm upgrade --install -n $NAMESPACE_NAME $NAMESPACE_NAME ./ -f values-frontend.yaml --create-namespace
