debug deploy to k8s

--- a/.github/workflows/publish-docker-image-and-deploy.yml
+++ b/.github/workflows/publish-docker-image-and-deploy.yml
@@ -13,6 +13,8 @@ env:
   K8S_PORT: ${{ secrets.K8S_PORT }}
   USERNAME: ${{ secrets.USERNAME }}
   BASTION_SSH_KEY: ${{secrets.BASTION_SSH_KEY}}
+  AWS_ACCESS_KEY_ID: ${{ secrets.AWS_ACCESS_KEY_ID }}
+  AWS_SECRET_ACCESS_KEY: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
 
 jobs:
   push_to_registry:
