--- a/charts/values-frontend.yaml
+++ b/charts/values-frontend.yaml
@@ -1,4 +1,4 @@
-image: ghcr.io/blockscout/frontend:build-ci-cd
+image: ghcr.io/blockscout/frontend:latest
 
 replicas:
   app: 1
@@ -23,6 +23,8 @@ resources:
 
 
 environment: {}
+  # ENV_NAME:
+  #   _default: value
 
 global:
   env: test
