--- a/.github/workflows/playwright.yml
+++ b/.github/workflows/playwright.yml
@@ -12,7 +12,7 @@ jobs:
       - name: Install dependencies
         run: yarn install
       - name: Install Playwright
-        run: yarn add playwright
+        run: yarn add playwright --with-deps
       - name: Run your tests
         run: yarn test-ct
       - name: Upload test results
