--- a/package.json
+++ b/package.json
@@ -40,6 +40,7 @@
     "use-font-face-observer": "^1.2.1"
   },
   "devDependencies": {
+    "@babel/plugin-proposal-class-properties": "^7.18.6",
     "@types/node": "17.0.36",
     "@types/react": "18.0.9",
     "@types/react-dom": "18.0.5",
