--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "@tanstack/react-query": "^4.0.10",
     "@tanstack/react-query-devtools": "^4.0.10",
     "@types/react-scroll": "^1.8.4",
+    "core-js": "^3.25.5",
     "dayjs": "^1.11.5",
     "framer-motion": "^6",
     "lodash": "^4.0.0",
@@ -40,7 +41,7 @@
     "use-font-face-observer": "^1.2.1"
   },
   "devDependencies": {
-    "@babel/plugin-proposal-class-properties": "^7.18.6",
+    "@babel/preset-env": "^7.19.3",
     "@types/node": "17.0.36",
     "@types/react": "18.0.9",
     "@types/react-dom": "18.0.5",
