--- a/.github/workflows/publish-docker-deploy-review.yml
+++ b/.github/workflows/publish-docker-deploy-review.yml
@@ -2,7 +2,10 @@ name: Deploy review environment
 
 on:
   # push:
-  pull_request:
+  workflow_run:
+    workflows: ["Linters"]
+    types:
+      - completed
 
 env:
   K8S_LOCAL_PORT: ${{ secrets.K8S_LOCAL_PORT }}
@@ -15,6 +18,7 @@ env:
 jobs:
   push_to_registry:
     name: Push Docker image to registry
+    if: ${{ github.event.workflow_run.conclusion == 'success' }}
     runs-on: ubuntu-latest
     outputs:
       shortSha: ${{ steps.output-step.outputs.short-sha }}
