--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -1,23 +1,23 @@
 name: Test workflow
 
 on: 
-  pull_request:
   workflow_run:
     workflows: ["Linters"]
     types:
       - completed
+    pull_request:
 
 jobs:
   on-success:
     if: ${{ github.event.workflow_run.conclusion == 'success' }}
-    name: Test depended workflow
+    name: Successfully run workflow
     runs-on: ubuntu-latest
     steps:
       - name: Print result
         run: echo Success
   on-error:
     if: ${{ github.event.workflow_run.conclusion == 'failure' }}
-    name: Test depended workflow
+    name: Error occurs on workflow run
     runs-on: ubuntu-latest
     steps:
       - name: Print result
