--- a/deploy/values/main/values.yaml
+++ b/deploy/values/main/values.yaml
@@ -279,6 +279,8 @@ frontend:
     enabled: true
     app: blockscout
   environment:
+    NEXT_PUBLIC_APP_PROTOCOL:
+      _default: https
     NEXT_PUBLIC_APP_PORT:
         _default: 80
     NEXT_PUBLIC_BLOCKSCOUT_VERSION:
