--- a/deploy/values/review/values.yaml
+++ b/deploy/values/review/values.yaml
@@ -280,7 +280,7 @@ frontend:
     app: blockscout
   environment:
     NEXT_PUBLIC_APP_PORT:
-      _default: 80
+      _default: 
     NEXT_PUBLIC_APP_PROTOCOL:
       _default: https
     NEXT_PUBLIC_BLOCKSCOUT_VERSION:
