--- a/.github/workflows/publish-docker-deploy-review.yml
+++ b/.github/workflows/publish-docker-deploy-review.yml
@@ -1,8 +1,10 @@
 name: Deploy review environment
 
 on:
-  push:
-  # pull_request:
+  # push:
+  pull_request:
+    paths:
+      - '**'
   workflow_dispatch:
 
 env:
