--- a/.github/workflows/publish-docker-deploy-review.yml
+++ b/.github/workflows/publish-docker-deploy-review.yml
@@ -3,6 +3,9 @@ name: Deploy review environment
 on:
   # push:
   pull_request:
+    types:
+      - opened
+      - edited
   #   paths:
   #     - '**'
   workflow_dispatch:
