--- a/.github/workflows/publish-docker-deploy-review.yml
+++ b/.github/workflows/publish-docker-deploy-review.yml
@@ -1,13 +1,9 @@
 name: Deploy review environment
 
 on:
-  # push:
-  pull_request:
-    types:
-      - opened
-      - edited
-  #   paths:
-  #     - '**'
+  push:
+    branches-ignore:
+      - main
   workflow_dispatch:
 
 env:
@@ -73,7 +69,7 @@ jobs:
     uses: blockscout/blockscout-ci-cd/.github/workflows/deploy.yaml@master
     with:
       valuesDir: deploy/values/review
-      appNamespace: review-front-$GITHUB_HEAD_REF_SLUG
+      appNamespace: review-front-$GITHUB_REF_SLUG
       blockscoutIngressHost: blockscout
       frontendIngressHost: blockscout
       frontendImage: ghcr.io/blockscout/frontend:prerelease-${{ needs.push_to_registry.outputs.shortSha }}
