--- a/.github/workflows/publish-docker-deploy-review.yml
+++ b/.github/workflows/publish-docker-deploy-review.yml
@@ -2,6 +2,7 @@ name: Deploy review environment
 
 on:
   pull_request:
+    types: [opened, synchronize, reopened]
   # push:
   #   branches-ignore:
   #     - 'main'
@@ -17,7 +18,6 @@ env:
 
 jobs:
   push_to_registry:
-    if: github.event.pull_request.number
     name: Push Docker image to registry
     runs-on: ubuntu-latest
     outputs:
@@ -66,7 +66,6 @@ jobs:
 
   deploy_frontend:
     name: Deploy frontend app
-    if: github.event.pull_request
     needs: push_to_registry
     uses: blockscout/blockscout-ci-cd/.github/workflows/deploy.yaml@master
     with:
