debug values for review

--- a/deploy/values/review/values.yaml
+++ b/deploy/values/review/values.yaml
@@ -167,7 +167,7 @@ geth:
   ingress:
     enabled: true
     host:
-      _default: asdfg-node.test.blockscout.aws-k8s.blockscout.com
+      _default: node.test.blockscout.aws-k8s.blockscout.com
     # enable https
     tls:
       enabled: false
@@ -194,7 +194,6 @@ scVerifier:
     enabled: true
     host:
       _default: verifier.test.blockscout.aws-k8s.blockscout.com
-      testnet: asdfg-verifier.test.blockscout.aws-k8s.blockscout.com
     # enable https
     tls:
       enabled: true
@@ -273,7 +272,6 @@ frontend:
     enabled: true
     host:
       _default: frontend.test.blockscout.aws-k8s.blockscout.com
-      testnet: asdfg-frontend.test.blockscout.aws-k8s.blockscout.com
     # enable https
     tls:
       enabled: true
