--- a/deploy/values/review/values.yaml
+++ b/deploy/values/review/values.yaml
@@ -4,7 +4,7 @@ global:
 blockscout:
   enabled: true
   image:
-    _default: blockscout/blockscout:review-prerelease-4dad4e9b@sha256:0afd8e344f7856eeb5326dff370f6258e588a77fa1611ecf16f8433944ddbaf9
+    _default: blockscout/blockscout:review-prerelease-9ad99cc8@sha256:608d335025a135f1cde6608b2449b8988b7cb8bfa6ea38e92ce1f184ec577781
   replicas:
     app: 1
   docker:
@@ -103,7 +103,7 @@ blockscout:
     APPS_MENU:
       _default: 'true'
     EXTERNAL_APPS:
-      _default: '[{"title": "Marketplace", "url": "..."}]'
+      _default: '[{"title": "Marketplace", "url": "https://blockscout-256-merge.test.aws-k8s.blockscout.com/poa/sokol/apps"}]'
 
 postgres:
   enabled: true
@@ -276,8 +276,7 @@ frontend:
     tls:
       enabled: true
     path:
-      - "/poa/sokol/account"
-      - "/poa/sokol/auth/profile"
+      - "/poa/sokol/(apps|auth/profile|account)"
       - "/_next"
       - "/node-api"
   resources:
