debug values for review

--- a/deploy/values/e2e/secrets.yaml
+++ b/deploy/values/e2e/secrets.yaml
@@ -70,14 +70,16 @@ frontend:
             _default: ENC[AES256_GCM,data:n/H2AH2n9ovn265iFbbrqeOOWS3s7FXgDv5FXJ2Dz133GuhTaqIU5psWjTraZ/Vh+dVM8M9zBLFfUanCWOz7cerq/QUoSVZjKvIvcyp6F072DGU=,iv:Co/pSR+U0vfkmWR+LDpxcQKDJl0WNbaEZihpzrRJcbc=,tag:HUiCX8WGJXWCDB59Y6iIbw==,type:str]
         SENTRY_CSP_REPORT_URI:
             _default: ENC[AES256_GCM,data:Hf4azYsGh2lysotK7afaHI85IaLBJeQmPlGE/lwokmX2eaQHVZJ/i5RsaoKoOCSiNyfAowr7P+6IBEC16BUTQMpbhYveBd7c/xjIsoomoHbTdoAdZA/QxNVpS4a2qVthruFudyT1BoZUHIGQ,iv:Mid+PfbslOyivrFSXopdeW96YvOcLP+g2RGcw1o7B98=,tag:IuPUsGdbZQodCMyi1DR04Q==,type:str]
+        NEXT_PUBLIC_AUTH0_CLIENT_ID:
+            _default: ENC[AES256_GCM,data:1doicz45IfwPza75+bYEe/3Ot1auCP3CtW1V1ilRevo=,iv:BlK5h1YRWAL00DuZnujnHWsKXrsTnP1G+F59+MNnHcU=,tag:gu/0BQ6mQXEmQhpWmBU3NQ==,type:str]
 sops:
     kms: []
     gcp_kms: []
     azure_kv: []
     hc_vault: []
     age: []
-    lastmodified: "2022-10-25T09:55:15Z"
-    mac: ENC[AES256_GCM,data:ZZqPTIRw4KvC7jNJMs6rtgKG4JuWmDZaW8NgMFTW1E6rgea3E4aFbJCM61wyncltYNcTdndc40YCkCHEXtO0gptBBJviL8fvo2bcc0m0V18X2zzjg8GU816t7PTKFQ79cALgtEPl5xLz75zJO83Gluskka47+AgPk5xBmG+sHAo=,iv:ZchfAH/GoMRQyqJNcGFSHMBreUQrkruQIhk2A/HcLjA=,tag:Id0YtPyVrXCxQit3mL43UQ==,type:str]
+    lastmodified: "2022-10-27T08:40:51Z"
+    mac: ENC[AES256_GCM,data:kGx9qCKWtLF+o2yO3qRISC0bi3DdiRbvQUtJ3efce8WgYEEr5ACEONR7bLWp4+TqjqCBm/LC5yk/AkjfqLrui/NxUNbiY+eGTJ00ajAPB5CtXdAS+Q62Db5gA08xElDdhKQngT3eBroxpnnF1vzn5snE8d/qutypTEQr4RMNwEA=,iv:MhfFeBlVGy2EzmyNU2u1JSkzi/ig1VJEvg99mq7ZgW8=,tag:O4UKnD5uPEHg5QQ86WTJ9A==,type:str]
     pgp:
         - created_at: "2022-09-14T13:42:28Z"
           enc: |
