--- a/.github/workflows/publish-docker-deploy-review.yml
+++ b/.github/workflows/publish-docker-deploy-review.yml
@@ -77,6 +77,7 @@ jobs:
 
   update_pr_meta:
     name: Update PR meta data
+    runs-on: ubuntu-latest
     # need: deploy_frontend
     steps:
       - name: Render template
