--- a/deploy/values/review/values.yaml
+++ b/deploy/values/review/values.yaml
@@ -5,7 +5,7 @@ blockscout:
   app: blockscout
   enabled: true
   image:
-    _default: blockscout/blockscout:latest
+    _default: blockscout/blockscout-sokol:latest
     #blockscout/blockscout:review-prerelease-9ad99cc8@sha256:608d335025a135f1cde6608b2449b8988b7cb8bfa6ea38e92ce1f184ec577781
   replicas:
     app: 1
