update values for all envs

--- a/deploy/values/main/values.yaml
+++ b/deploy/values/main/values.yaml
@@ -1,10 +1,12 @@
 global:
-  env: e2e
+  env: main
 # enable Blockscout deploy
 blockscout:
+  app: blockscout
   enabled: true
   image:
-    _default: blockscout/blockscout:review-prerelease-9ad99cc8@sha256:608d335025a135f1cde6608b2449b8988b7cb8bfa6ea38e92ce1f184ec577781
+    _default: blockscout/blockscout-sokol:latest
+    #blockscout/blockscout:review-prerelease-9ad99cc8@sha256:608d335025a135f1cde6608b2449b8988b7cb8bfa6ea38e92ce1f184ec577781
   replicas:
     app: 1
   docker:
@@ -103,7 +105,7 @@ blockscout:
     APPS_MENU:
       _default: 'true'
     EXTERNAL_APPS:
-      _default: '[{"title": "Marketplace", "url": "https://blockscout-main.test.aws-k8s.blockscout.com/poa/sokol/apps"}]'
+      _default: '[{"title": "Marketplace", "url": "/poa/sokol/apps"}]'
 
 postgres:
   enabled: true
@@ -260,6 +262,7 @@ scVerifier:
     SMART_CONTRACT_VERIFIER__JAEGER__ENABLED:
       _default: 'false'
 frontend:
+  app: blockscout
   enabled: true
   image:
     _default: ghcr.io/blockscout/frontend:main
