env for base path

--- a/configs/envs/.env.poa_core
+++ b/configs/envs/.env.poa_core
@@ -1,3 +1,6 @@
+# app config
+NEXT_PUBLIC_APP_BASE_PATH=/poa/core
+
 # ui config
 NEXT_PUBLIC_FOOTER_TELEGRAM_LINK=https://t.me/poa_network
 NEXT_PUBLIC_FOOTER_STAKING_LINK=https://duneanalytics.com/maxaleks/xdai-staking
