--- a/deploy/values/review/values.yaml
+++ b/deploy/values/review/values.yaml
@@ -6,7 +6,6 @@ blockscout:
   enabled: true
   image:
     _default: blockscout/blockscout:latest
-    #blockscout/blockscout:review-prerelease-9ad99cc8@sha256:608d335025a135f1cde6608b2449b8988b7cb8bfa6ea38e92ce1f184ec577781
   replicas:
     app: 1
   docker:
@@ -113,6 +112,8 @@ blockscout:
       _default: '[{"title": "Marketplace", "url": "/apps"}]'
     JSON_RPC:
       _default: https://sokol.poa.network
+    API_V2_ENABLED:
+      _default: 'true'
 
 postgres:
   enabled: true
@@ -280,18 +281,21 @@ frontend:
     targetPort: 3000
   ingress:
     enabled: true
-    annotations:
-      - 'nginx.ingress.kubernetes.io/use-regex: "true"'
+    # annotations:
+    #   - 'nginx.ingress.kubernetes.io/use-regex: "true"'
     host:
       _default: frontend.test.blockscout.aws-k8s.blockscout.com
     # enable https
     tls:
       enabled: true
     path:
-      - "/(apps|auth/profile|account)"
+      # - "/(apps|auth/profile|account)"
+      - "/apps"
       - "/_next"
       - "/node-api"
       - "/static"
+      - "/auth/profile"
+      - "/account"
   resources:
     limits:
       memory:
