--- a/deploy/values/main/values.yaml
+++ b/deploy/values/main/values.yaml
@@ -79,13 +79,15 @@ blockscout:
     ETHEREUM_JSONRPC_VARIANT:
       _default: geth
     ETHEREUM_JSONRPC_TRACE_URL:
-      _default: http://geth-svc:8545
+      _default: https://eth-goerli.public.blastapi.io
     ETHEREUM_JSONRPC_HTTP_URL:
-      _default: http://geth-svc:8545
+      _default: https://eth-goerli.public.blastapi.io
     ETHEREUM_JSONRPC_WS_URL:
-      _default: ws://geth-svc:8546
+      _default: wss://eth-goerli.public.blastapi.io/ws
     COIN:
-      _default: DAI
+      _default: ETH
+    CHAIN_ID:
+      _default: 5
     MIX_ENV:
       _default: prod
     ECTO_USE_SSL:
@@ -111,9 +113,23 @@ blockscout:
     EXTERNAL_APPS:
       _default: '[{"title": "Marketplace", "url": "/apps"}]'
     JSON_RPC:
-      _default: https://sokol.poa.network
+      _default: https://eth-goerli.public.blastapi.io
     API_V2_ENABLED:
       _default: 'true'
+    FIRST_BLOCK:
+      _default: 7878406
+    # GAS_PRICE:
+    #   _default: 1
+    # GAS_PRICE_ORACLE_AVERAGE_PERCENTILE:
+    #   _default: 60
+    # GAS_PRICE_ORACLE_CACHE_PERIOD:
+    #   _default: 300
+    # GAS_PRICE_ORACLE_FAST_PERCENTILE:
+    #   _default: 90
+    # GAS_PRICE_ORACLE_NUM_OF_BLOCKS:
+    #   _default: 200
+    # GAS_PRICE_ORACLE_SAFELOW_PERCENTILE:
+    #   _default: 35
 
 postgres:
   enabled: true
@@ -142,7 +158,7 @@ postgres:
       _default: 'trust'
 # enable geth deploy
 geth:
-  enabled: true
+  enabled: false
   image:
     _default: ethereum/client-go:stable
   replicas:
@@ -327,19 +343,19 @@ frontend:
     NEXT_PUBLIC_FOOTER_STAKING_LINK:
       _default: https://duneanalytics.com/maxaleks/xdai-staking
     NEXT_PUBLIC_NETWORK_NAME:
-      _default: Sokol
+      _default: Goerli
     NEXT_PUBLIC_NETWORK_SHORT_NAME:
-      _default: POA
+      _default: ETH
     NEXT_PUBLIC_NETWORK_ASSETS_PATHNAME:
-      _default: poa
+      _default: eth
     NEXT_PUBLIC_NETWORK_TYPE:
-      _default: poa_core
+      _default: eth_goerli
     NEXT_PUBLIC_NETWORK_ID:
-      _default: 77
+      _default: 5
     NEXT_PUBLIC_NETWORK_CURRENCY_NAME:
-      _default: POA Network Sokol
+      _default: ETH Network Goerli
     NEXT_PUBLIC_NETWORK_CURRENCY_SYMBOL:
-      _default: SPOA
+      _default: ETH
     NEXT_PUBLIC_NETWORK_CURRENCY_DECIMALS:
       _default: 18
     NEXT_PUBLIC_NETWORK_VERIFICATION_TYPE:
