--- a/deploy/values/main/values.yaml
+++ b/deploy/values/main/values.yaml
@@ -167,7 +167,7 @@ geth:
   portWs: 8546
   portAuth: 8551
   command: '["geth"]'
-  args: '["console", "--goerli", "--datadir=/geth", "--gcmode=archive", "--http", "--http.vhosts=*", "--http.addr=0.0.0.0", "--http.port=8545", "--http.api=eth,net,web3,debug,txpool", "--ws", "--ws.origins=*", "--ws.addr=0.0.0.0", "--ws.port=8546", "--ws.api=eth,net,web3,debug,txpool", "--allow-insecure-unlock", "--rpc.allow-unprotected-txs", "--http.corsdomain=*", "--vmdebug", "--rpc.txfeecap=0"]'
+  args: '["--goerli", "--datadir=/.ethereum", "--gcmode=archive", "--http", "--http.vhosts=*", "--http.addr=0.0.0.0", "--http.port=8545", "--http.api=eth,net,web3,debug,txpool", "--ws", "--ws.origins=*", "--ws.addr=0.0.0.0", "--ws.port=8546", "--ws.api=eth,net,web3,debug,txpool", "--allow-insecure-unlock", "--rpc.allow-unprotected-txs", "--http.corsdomain=*", "--vmdebug", "--rpc.txfeecap=0"]'
   environment: {}
   persistence:
     enabled: true
@@ -201,9 +201,63 @@ geth:
     tls:
       enabled: false
   jwt:
-    enabled: false
+    enabled: true
+    mountPath: /geth/geth/jwtsecret
   files:
     enabled: false
+  # enable client deploy (Prysm, lighthouse, nimbus, etc.)
+  client:
+    enabled: true
+    image:
+      _default: gcr.io/prysmaticlabs/prysm/beacon-chain:stable
+    # command: '["sh","./root/init.sh"]'
+    args: '["--goerli", "--datadir=/data", "--jwt-secret=/geth/geth/jwtsecret", "--rpc-host=0.0.0.0", "--grpc-gateway-host=0.0.0.0", "--monitoring-host=0.0.0.0", "--execution-endpoint=http://geth-svc:8545", "--checkpoint-sync-url=https://goerli.checkpoint-sync.ethdevops.io", "--genesis-beacon-api-url=https://goerli.checkpoint-sync.ethdevops.io"]'
+    ports:
+      portTcp:
+        number: 13000
+        protocol: TCP
+      portUdp:
+        number: 12000
+        protocol: UDP
+      portRpc:
+        number: 4000
+        protocol: TCP
+      portRpcGateway:
+        number: 3500
+        protocol: TCP
+      portMonitoring:
+        number: 8080
+        protocol: TCP
+    persistence:
+      enabled: false
+      mountPath: path
+      storageClass: gp3-new
+      storage: 100Gi
+    files:
+      enabled: false
+      list: {}
+    service:
+      # ClusterIP, NodePort or LoadBalancer
+      type: ClusterIP
+    # enable ingress
+    ingress:
+      enabled: false
+      host:
+      # enable https
+      tls:
+        enabled: false
+    environment: {}
+    resources:
+      limits:
+        memory:
+          _default: "6Gi"
+        cpu:
+          _default: "3"
+      requests:
+        memory:
+          _default: "6Gi"
+        cpu:
+          _default: "3"
 # enable Smart-contract-verifier deploy
 scVerifier:
   enabled: true
