--- a/deploy/values/main/values.yaml
+++ b/deploy/values/main/values.yaml
@@ -62,74 +62,80 @@ blockscout:
     app: blockscout
   # Blockscout environment variables
   environment:
-    ENV:
-      _default: test
-    RESOURCE_MODE:
-      _default: account
-    PUBLIC:
-      _default: 'false'
-    PORT:
-      _default: 4000
-    PORT_PG:
-      _default: 5432
-    PORT_NETWORK_HTTP:
-      _default: 8545
-    PORT_NETWORK_WS:
-      _default: 8546
+    ETHEREUM_JSONRPC_TRACE_URL:
+      _default: http://geth-svc.eth-goerli.svc.cluster.local:8545
+    ETHEREUM_JSONRPC_HTTP_URL:
+      _default: http://geth-svc.eth-goerli.svc.cluster.local:8545
+    BLOCKSCOUT_VERSION:
+      _default: v4.1.8-beta
     ETHEREUM_JSONRPC_VARIANT:
       _default: geth
-    ETHEREUM_JSONRPC_TRACE_URL:
-      _default: http://geth-svc:8545
-    ETHEREUM_JSONRPC_HTTP_URL:
-      _default: http://geth-svc:8545
-    ETHEREUM_JSONRPC_WS_URL:
-      _default: ws://geth-svc:8546
+    HEART_BEAT_TIMEOUT:
+      _default: 30
+    SHOW_PRICE_CHART:
+      _default: false
+    CACHE_BLOCK_COUNT_PERIOD:
+      _default: 7200
+    PORT:
+      _default: 4000
+    SUBNETWORK:
+      _default: Ethereum
+    HEALTHY_BLOCKS_PERIOD:
+      _default: 60
+    NETWORK:
+      _default: (Goerli)
+    NETWORK_ICON:
+      _default: _network_icon.html
     COIN:
       _default: ETH
+    COIN_NAME:
+      _default: ETH
+    LOGO:
+      _default: /images/goerli_logo.svg
+    HISTORY_FETCH_INTERVAL:
+      _default: 60
+    TXS_HISTORIAN_INIT_LAG:
+      _default: 0
+    TXS_STATS_DAYS_TO_COMPILE_AT_INIT:
+      _default: 1
+    COIN_BALANCE_HISTORY_DAYS:
+      _default: 90
+    GAS_PRICE_ORACLE_NUM_OF_BLOCKS:
+      _default: 200
+    GAS_PRICE_ORACLE_SAFELOW_PERCENTILE:
+      _default: 35
+    GAS_PRICE_ORACLE_AVERAGE_PERCENTILE:
+      _default: 60
+    GAS_PRICE_ORACLE_FAST_PERCENTILE:
+      _default: 90
+    GAS_PRICE_ORACLE_CACHE_PERIOD:
+      _default: 300
+    POOL_SIZE:
+      _default: 20
+    DISPLAY_TOKEN_ICONS:
+      _default: 'true'
+    FETCH_REWARDS_WAY:
+      _default: manual
+    INDEXER_DISABLE_PENDING_TRANSACTIONS_FETCHER:
+      _default: 'true'
+    SHOW_TESTNET_LABEL:
+      _default: 'true'
     CHAIN_ID:
       _default: 5
-    MIX_ENV:
-      _default: prod
-    ECTO_USE_SSL:
-      _default: 'false'
+    ENABLE_RUST_VERIFICATION_SERVICE:
+      _default: 'true'
     RUST_VERIFICATION_SERVICE_URL:
-      _default: http://sc-verifier-svc:8043
+      _default: https://sc-verifier.aws-k8s.blockscout.com/
+    INDEXER_MEMORY_LIMIT:
+      _default: 3
     ACCOUNT_ENABLED:
       _default: 'true'
-    DISABLE_REALTIME_INDEXER:
-      _default: 'false'
-    SOCKET_ROOT:
-      _default: "/"
-    NETWORK_PATH:
-      _default: "/"
-    API_PATH:
-      _default: "/"
-    ETHEREUM_JSONRPC_DISABLE_ARCHIVE_BALANCES:
-      _default: 'true'
-    API_BASE_PATH:
-      _default: "/"
-    APPS_MENU:
-      _default: 'true'
-    EXTERNAL_APPS:
-      _default: '[{"title": "Marketplace", "url": "/apps"}]'
-    JSON_RPC:
-      _default: https://eth-goerli.public.blastapi.io
     API_V2_ENABLED:
       _default: 'true'
-    FIRST_BLOCK:
-      _default: '7878406'
-    # GAS_PRICE:
-    #   _default: 1
-    # GAS_PRICE_ORACLE_AVERAGE_PERCENTILE:
-    #   _default: 60
-    # GAS_PRICE_ORACLE_CACHE_PERIOD:
-    #   _default: 300
-    # GAS_PRICE_ORACLE_FAST_PERCENTILE:
-    #   _default: 90
-    # GAS_PRICE_ORACLE_NUM_OF_BLOCKS:
-    #   _default: 200
-    # GAS_PRICE_ORACLE_SAFELOW_PERCENTILE:
-    #   _default: 35
+    APPS_MENU:
+      _default: 'true'
+    APPS:
+      _default: '[{"title": "Marketplace", "url": "/apps", "embedded?": true}]'
 
 postgres:
   enabled: true
@@ -158,7 +164,7 @@ postgres:
       _default: 'trust'
 # enable geth deploy
 geth:
-  enabled: true
+  enabled: false
   image:
     _default: ethereum/client-go:stable
   replicas:
@@ -389,6 +395,39 @@ frontend:
     enabled: true
     app: blockscout
   environment:
+    # ui config
+    NEXT_PUBLIC_FEATURED_NETWORKS:
+      _default: "[{'title':'Gnosis Chain','url':'https://blockscout.com/xdai/mainnet','group':'mainnets','type':'xdai_mainnet'},{'title':'Optimism on Gnosis Chain','url':'https://blockscout.com/xdai/optimism','group':'mainnets','icon':'https://www.fillmurray.com/60/60','type':'xdai_optimism'},{'title':'Arbitrum on xDai','url':'https://blockscout.com/xdai/aox','group':'mainnets'},{'title':'Ethereum','url':'https://blockscout.com/eth/mainnet','group':'mainnets','type':'eth_mainnet'},{'title':'Ethereum Classic','url':'https://blockscout.com/etx/mainnet','group':'mainnets','type':'etc_mainnet'},{'title':'POA','url':'https://blockscout.com/poa/core','group':'mainnets','type':'poa_core'},{'title':'RSK','url':'https://blockscout.com/rsk/mainnet','group':'mainnets','type':'rsk_mainnet'},{'title':'Gnosis Chain Testnet','url':'https://blockscout.com/xdai/testnet','group':'testnets','type':'xdai_testnet'},{'title':'POA Sokol','url':'https://blockscout.com/poa/sokol','group':'testnets','type':'poa_sokol'},{'title':'ARTIS Σ1','url':'https://blockscout.com/artis/sigma1','group':'other','type':'artis_sigma1'},{'title':'LUKSO L14','url':'https://blockscout.com/lukso/l14','group':'other','type':'lukso_l14'},{'title':'Astar','url':'https://blockscout.com/astar','group':'other','type':'astar'}]"
+    NEXT_PUBLIC_NETWORK_EXPLORERS:
+      _default: "[{'title':'Etherscan','baseUrl':'https://goerli.etherscan.io','paths':{'tx':'/tx'}}]"
+    # network config
+    NEXT_PUBLIC_NETWORK_NAME:
+      _default: Goerli
+    NEXT_PUBLIC_NETWORK_ASSETS_PATHNAME:
+      _default: ethereum
+    NEXT_PUBLIC_NETWORK_TYPE:
+      _default: goerli
+    NEXT_PUBLIC_NETWORK_ID:
+      _default: 5
+    NEXT_PUBLIC_NETWORK_CURRENCY_NAME:
+      _default: Ether
+    NEXT_PUBLIC_NETWORK_CURRENCY_SYMBOL:
+      _default: ETH
+    NEXT_PUBLIC_NETWORK_CURRENCY_DECIMALS:
+      _default: 18
+    NEXT_PUBLIC_NETWORK_TOKEN_ADDRESS:
+      _default: 0xC02aaA39b223FE8D0A0e5C4F27eAD9083C756Cc2
+    NEXT_PUBLIC_IS_ACCOUNT_SUPPORTED:
+      _default: true
+    NEXT_PUBLIC_NETWORK_VERIFICATION_TYPE:
+      _default: validation
+    NEXT_PUBLIC_MARKETPLACE_SUBMIT_FORM:
+      _default: https://airtable.com/shrqUAcjgGJ4jU88C
+    NEXT_PUBLIC_MARKETPLACE_APP_LIST:
+      _default: "[{'author': 'Blockscout', 'id': 'token-approval-tracker', 'title': 'Token Approval Tracker', 'logo': 'https://approval-tracker.vercel.app/icon-192.png', 'categories': ['security', 'tools'], 'shortDescription': 'Token Approval Tracker shows all approvals for any ERC20-compliant tokens and NFTs and lets to revoke them or adjust the approved amount.', 'site': 'https://docs.blockscout.com/for-users/blockscout-apps/token-approval-tracker', 'description': 'Token Approval Tracker shows all approvals for any ERC20-compliant tokens and NFTs and lets to revoke them or adjust the approved amount.', 'url': 'https://approval-tracker.vercel.app/'}]"
+    # api config
+    NEXT_PUBLIC_API_BASE_PATH:
+      _default: /eth/goerli
     NEXT_PUBLIC_BLOCKSCOUT_VERSION:
       _default: v4.1.8-beta
     NEXT_PUBLIC_FOOTER_GITHUB_LINK:
@@ -399,41 +438,11 @@ frontend:
       _default: preview
     NEXT_PUBLIC_APP_INSTANCE:
       _default: unknown
-    NEXT_PUBLIC_FOOTER_TELEGRAM_LINK:
-      _default: https://t.me/poa_network
-    NEXT_PUBLIC_FOOTER_STAKING_LINK:
-      _default: https://duneanalytics.com/maxaleks/xdai-staking
-    NEXT_PUBLIC_NETWORK_NAME:
-      _default: Goerli
-    NEXT_PUBLIC_NETWORK_SHORT_NAME:
-      _default: ETH
-    NEXT_PUBLIC_NETWORK_ASSETS_PATHNAME:
-      _default: eth
-    NEXT_PUBLIC_NETWORK_TYPE:
-      _default: eth_goerli
-    NEXT_PUBLIC_NETWORK_ID:
-      _default: 5
-    NEXT_PUBLIC_NETWORK_CURRENCY_NAME:
-      _default: ETH Network Goerli
-    NEXT_PUBLIC_NETWORK_CURRENCY_SYMBOL:
-      _default: ETH
-    NEXT_PUBLIC_NETWORK_CURRENCY_DECIMALS:
-      _default: 18
-    NEXT_PUBLIC_NETWORK_VERIFICATION_TYPE:
-      _default: validation
-    NEXT_PUBLIC_IS_ACCOUNT_SUPPORTED:
-      _default: 'true'
-    NEXT_PUBLIC_FEATURED_NETWORKS:
-      _default: "[{'title':'Gnosis Chain','url':'https://blockscout.com/xdai/mainnet','group':'mainnets','type':'xdai_mainnet'},{'title':'Optimism on Gnosis Chain','url':'https://blockscout.com/xdai/optimism','group':'mainnets','icon':'https://www.fillmurray.com/60/60','type':'xdai_optimism'},{'title':'Arbitrum on xDai','url':'https://blockscout.com/xdai/aox','group':'mainnets'},{'title':'Ethereum','url':'https://blockscout.com/eth/mainnet','group':'mainnets','type':'eth_mainnet'},{'title':'Ethereum Classic','url':'https://blockscout.com/etx/mainnet','group':'mainnets','type':'etc_mainnet'},{'title':'POA','url':'https://blockscout.com/poa/core','group':'mainnets','type':'poa_core'},{'title':'RSK','url':'https://blockscout.com/rsk/mainnet','group':'mainnets','type':'rsk_mainnet'},{'title':'Gnosis Chain Testnet','url':'https://blockscout.com/xdai/testnet','group':'testnets','type':'xdai_testnet'},{'title':'POA Sokol','url':'https://blockscout.com/poa/sokol','group':'testnets','type':'poa_sokol'},{'title':'ARTIS Σ1','url':'https://blockscout.com/artis/sigma1','group':'other','type':'artis_sigma1'},{'title':'LUKSO L14','url':'https://blockscout.com/lukso/l14','group':'other','type':'lukso_l14'},{'title':'Astar','url':'https://blockscout.com/astar','group':'other','type':'astar'}]"
     NEXT_PUBLIC_API_HOST:
-      _default: blockscout.com
-    NEXT_PUBLIC_API_BASE_PATH:
-      _default: /
-    NEXT_PUBLIC_MARKETPLACE_SUBMIT_FORM:
-      _default: https://airtable.com/shrqUAcjgGJ4jU88C
-    NEXT_PUBLIC_MARKETPLACE_APP_LIST:
-      _default: "[{'author': 'Blockscout', 'id': 'token-approval-tracker', 'title': 'Token Approval Tracker', 'logo': 'https://approval-tracker.vercel.app/icon-192.png', 'categories': ['security', 'tools'], 'shortDescription': 'Token Approval Tracker shows all approvals for any ERC20-compliant tokens and NFTs and lets to revoke them or adjust the approved amount.', 'site': 'https://docs.blockscout.com/for-users/blockscout-apps/token-approval-tracker', 'description': 'Token Approval Tracker shows all approvals for any ERC20-compliant tokens and NFTs and lets to revoke them or adjust the approved amount.', 'url': 'https://approval-tracker.vercel.app/'}]"
+      _default: blockscout.com/eth/goerli
+    NEXT_PUBLIC_APP_HOST:
+      _default: blockscout.com/eth/goerli
     NEXT_PUBLIC_LOGOUT_URL:
       _default: https://blockscoutcom.us.auth0.com/v2/logout
     NEXT_PUBLIC_LOGOUT_RETURN_URL:
-      _default: https://blockscout.com/auth/logout
+      _default: http://blockscout.com/eth/goerli/auth/logout
