--- a/package.json
+++ b/package.json
@@ -71,8 +71,8 @@
     "@storybook/react": "^6.5.13",
     "@storybook/testing-library": "^0.0.13",
     "@svgr/webpack": "^6.5.1",
-    "@types/d3": "^7.4.0",
     "@testing-library/react": "^13.4.0",
+    "@types/d3": "^7.4.0",
     "@types/jest": "^29.2.0",
     "@types/node": "17.0.36",
     "@types/phoenix": "^1.5.4",
@@ -97,6 +97,7 @@
     "svgo": "^2.8.0",
     "ts-jest": "^29.0.3",
     "ts-node": "^10.9.1",
+    "tsconfig-paths-webpack-plugin": "^4.0.0",
     "typescript": "4.7.2"
   },
   "lint-staged": {
